tests/ui/type-alias-impl-trait/issue-53096.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-53096.rs:12:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to 1 previous error

